# PlacesManagementWebApp

./: Dockerfile  README.md  pyproject.toml
places/: asgi.py  settings.py  urls.py  wsgi.py
places/places/: settings.py  urls.py
places/places_api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
places/places_api/migrations/: 0001_initial.py  0002_place_delete_places.py  0003_uuidtaggeditem_alter_place_tags.py  0004_alter_place_name_alter_place_tags.py  0005_alter_place_address.py  0006_alter_place_address_alter_place_name.py
